<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pointcloud_segmentation</name>
  <version>0.0.1</version>
  <description>pointcloud segmentation using PCL</description>
  <maintainer email="jeremy3771@naver.com">MinHyuk</maintainer>
  <license>MIT</license>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_1.12</depend>
  <depend>pcl_msgs</depend>
  <depend>pcl_conversions</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
